--- a/WinForm/WinForm.csproj
+++ b/WinForm/WinForm.csproj
@@ -8,4 +8,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.0" />
+    </ItemGroup>
+
 </Project>
